the build no longer worked #1593
This has mostly to do with apache other plugins which now are somewhere
else.